crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
//@target: ES5
for (var of of) { }
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,2 @@
 //@target: ES5
-for (var of of) {
-}
+for (var of of) { }
```

# Output

```js
//@target: ES5
for (var of of) { }
```


# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found ')'
  ┌─ parserES5ForOfStatement21.ts:2:15
  │
2 │ for (var of of) { }
  │               ^ Expected an expression, or an assignment here


```


